--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://IamXacer.github.io/RTKQueryMusicfun",
   "name": "musicfun-rtk",
   "private": true,
   "version": "0.0.0",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@reduxjs/toolkit": "2.8.2",
@@ -25,6 +28,7 @@
     "eslint": "9.32.0",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.20",
+    "gh-pages": "^6.3.0",
     "globals": "16.3.0",
     "prettier": "3.6.2",
     "typescript": "5.8.3",
