--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "start": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -18,7 +19,8 @@
     "react-dom": "19.1.1",
     "react-hook-form": "7.63.0",
     "react-redux": "9.2.0",
-    "react-router": "7.7.1"
+    "react-router": "7.7.1",
+    "react-toastify": "11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "9.32.0",
@@ -34,6 +36,6 @@
     "prettier": "3.6.2",
     "typescript": "5.8.3",
     "typescript-eslint": "8.38.0",
-    "vite": "7.0.6"
+    "vite": "^7.0.6"
   }
 }
